year_3/compilers/sintatico/sintatico.output
Terminals unused in grammar

   BREAK
   SWITCH
   CASE
   DEFAULT
   TYPEDEF
   STRUCT
   POINTER


Grammar

    0 $accept: inicio $end

    1 inicio: program

    2 program: declaracao
    3        | funcao
    4        | program declaracao
    5        | program funcao

    6 declaracao: NUMBER_SIGN DEFINE IDENTIFIER exp
    7           | declaracao_variaveis
    8           | declaracao_prototipos

    9 funcao: tipo type_pointer IDENTIFIER parametros L_CURLY_BRACKET variaveis comandos R_CURLY_BRACKET

   10 type_pointer: MULTIPLY
   11             | %empty

   12 variaveis: variaveis declaracao_variaveis
   13          | %empty

   14 declaracao_variaveis: tipo declaracao_variaveis1 SEMICOLON

   15 declaracao_variaveis1: type_pointer IDENTIFIER vetor atribuicao
   16                      | declaracao_variaveis1 COMMA type_pointer IDENTIFIER vetor atribuicao

   17 vetor: L_SQUARE_BRACKET exp R_SQUARE_BRACKET
   18      | %empty

   19 atribuicao: ASSIGN expressao_de_atribuicao
   20           | %empty

   21 declaracao_prototipos: tipo type_pointer IDENTIFIER parametros SEMICOLON

   22 parametros: L_PAREN parametros1 R_PAREN

   23 parametros1: tipo type_pointer IDENTIFIER vetor parametros2
   24            | %empty

   25 parametros2: parametros2 COMMA tipo type_pointer IDENTIFIER vetor
   26            | %empty

   27 tipo: INT
   28     | CHAR
   29     | VOID

   30 bloco: L_CURLY_BRACKET comandos R_CURLY_BRACKET

   31 comandos: lista_de_comandos
   32         | comandos lista_de_comandos

   33 lista_de_comandos: DO bloco WHILE L_PAREN exp R_PAREN SEMICOLON
   34                  | IF L_PAREN exp R_PAREN bloco
   35                  | IF L_PAREN exp R_PAREN bloco ELSE bloco
   36                  | WHILE L_PAREN exp R_PAREN bloco
   37                  | FOR L_PAREN talvez_exp SEMICOLON talvez_exp SEMICOLON talvez_exp R_PAREN bloco
   38                  | PRINTF L_PAREN STRING comma_talvez_exp R_PAREN SEMICOLON
   39                  | SCANF L_PAREN STRING COMMA BITWISE_AND IDENTIFIER R_PAREN SEMICOLON
   40                  | EXIT L_PAREN exp R_PAREN SEMICOLON
   41                  | RETURN talvez_exp SEMICOLON
   42                  | exp SEMICOLON
   43                  | SEMICOLON
   44                  | bloco

   45 talvez_exp: exp
   46           | %empty

   47 comma_talvez_exp: COMMA exp
   48                 | %empty

   49 exp: expressao_de_atribuicao
   50    | exp COMMA expressao_de_atribuicao

   51 expressao_de_atribuicao: expressao_condicional
   52                        | expressao_unaria ASSIGN expressao_de_atribuicao
   53                        | expressao_unaria ADD_ASSIGN expressao_de_atribuicao
   54                        | expressao_unaria MINUS_ASSIGN expressao_de_atribuicao

   55 expressao_condicional: expressao_OR_logica ternaria

   56 ternaria: TERNARY_CONDITIONAL exp COLON expressao_condicional
   57         | %empty

   58 expressao_OR_logica: expressao_AND_logico
   59                    | expressao_OR_logica LOGICAL_OR expressao_AND_logico

   60 expressao_AND_logico: expressao_OR
   61                     | expressao_AND_logico LOGICAL_AND expressao_OR

   62 expressao_OR: expressao_XOR
   63             | expressao_OR BITWISE_OR expressao_XOR

   64 expressao_XOR: expressao_AND
   65              | expressao_XOR BITWISE_XOR expressao_AND

   66 expressao_AND: expressao_de_igualdade
   67              | expressao_AND BITWISE_AND expressao_de_igualdade

   68 expressao_de_igualdade: expressao_relacional
   69                       | expressao_de_igualdade EQUAL expressao_relacional
   70                       | expressao_de_igualdade NOT_EQUAL expressao_relacional

   71 expressao_relacional: expressao_shift
   72                     | expressao_relacional LESS_THAN expressao_shift
   73                     | expressao_relacional LESS_EQUAL expressao_shift
   74                     | expressao_relacional GREATER_THAN expressao_shift
   75                     | expressao_relacional GREATER_EQUAL expressao_shift

   76 expressao_shift: expressao_aditiva
   77                | expressao_shift L_SHIFT expressao_aditiva
   78                | expressao_shift R_SHIFT expressao_aditiva

   79 expressao_aditiva: expressao_multiplicativa
   80                  | expressao_aditiva PLUS expressao_multiplicativa
   81                  | expressao_aditiva MINUS expressao_multiplicativa

   82 expressao_multiplicativa: expressao_cast
   83                         | expressao_multiplicativa MULTIPLY expressao_cast
   84                         | expressao_multiplicativa DIV expressao_cast
   85                         | expressao_multiplicativa REMAINDER expressao_cast

   86 expressao_cast: expressao_unaria
   87               | L_PAREN tipo type_pointer R_PAREN expressao_cast

   88 expressao_unaria: expressao_pos_fixada
   89                 | INC expressao_unaria
   90                 | DEC expressao_unaria
   91                 | BITWISE_AND expressao_cast
   92                 | MULTIPLY expressao_cast
   93                 | PLUS expressao_cast
   94                 | MINUS expressao_cast
   95                 | BITWISE_NOT expressao_cast
   96                 | NOT expressao_cast

   97 expressao_pos_fixada: expressao_primaira
   98                     | expressao_pos_fixada L_SQUARE_BRACKET exp R_SQUARE_BRACKET
   99                     | expressao_pos_fixada INC
  100                     | expressao_pos_fixada DEC
  101                     | expressao_pos_fixada L_PAREN loop_expressao_de_atribuicao R_PAREN

  102 loop_expressao_de_atribuicao: expressao_de_atribuicao
  103                             | loop_expressao_de_atribuicao COMMA expressao_de_atribuicao
  104                             | %empty

  105 expressao_primaira: IDENTIFIER
  106                   | numero
  107                   | CHARACTER
  108                   | STRING
  109                   | L_PAREN exp R_PAREN

  110 numero: NUM_INTEGER
  111       | NUM_HEXA
  112       | NUM_OCTAL


Terminals, with rules where they appear

$end (0) 0
error (256)
CHARACTER (258) 107
VOID (259) 29
INT (260) 27
NUM_INTEGER (261) 110
CHAR (262) 28
RETURN (263) 41
BREAK (264)
SWITCH (265)
CASE (266)
DEFAULT (267)
DO (268) 33
WHILE (269) 33 36
FOR (270) 37
IF (271) 34 35
ELSE (272) 35
TYPEDEF (273)
STRUCT (274)
PLUS (275) 80 93
MINUS (276) 81 94
MULTIPLY (277) 10 83 92
DIV (278) 84
REMAINDER (279) 85
INC (280) 89 99
DEC (281) 90 100
BITWISE_AND (282) 39 67 91
BITWISE_OR (283) 63
BITWISE_NOT (284) 95
BITWISE_XOR (285) 65
NOT (286) 96
LOGICAL_AND (287) 61
LOGICAL_OR (288) 59
EQUAL (289) 69
NOT_EQUAL (290) 70
LESS_THAN (291) 72
GREATER_THAN (292) 74
GREATER_EQUAL (293) 75
LESS_EQUAL (294) 73
R_SHIFT (295) 78
L_SHIFT (296) 77
ASSIGN (297) 19 52
ADD_ASSIGN (298) 53
MINUS_ASSIGN (299) 54
SEMICOLON (300) 14 21 33 37 38 39 40 41 42 43
COMMA (301) 16 25 39 47 50 103
COLON (302) 56
L_PAREN (303) 22 33 34 35 36 37 38 39 40 87 101 109
R_PAREN (304) 22 33 34 35 36 37 38 39 40 87 101 109
L_CURLY_BRACKET (305) 9 30
R_CURLY_BRACKET (306) 9 30
L_SQUARE_BRACKET (307) 17 98
R_SQUARE_BRACKET (308) 17 98
TERNARY_CONDITIONAL (309) 56
NUMBER_SIGN (310) 6
POINTER (311)
PRINTF (312) 38
SCANF (313) 39
DEFINE (314) 6
EXIT (315) 40
IDENTIFIER (316) 6 9 15 16 21 23 25 39 105
NUM_HEXA (317) 111
NUM_OCTAL (318) 112
STRING (319) 38 39 108


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
inicio (66)
    on left: 1, on right: 0
program (67)
    on left: 2 3 4 5, on right: 1 4 5
declaracao (68)
    on left: 6 7 8, on right: 2 4
funcao (69)
    on left: 9, on right: 3 5
type_pointer (70)
    on left: 10 11, on right: 9 15 16 21 23 25 87
variaveis (71)
    on left: 12 13, on right: 9 12
declaracao_variaveis (72)
    on left: 14, on right: 7 12
declaracao_variaveis1 (73)
    on left: 15 16, on right: 14 16
vetor (74)
    on left: 17 18, on right: 15 16 23 25
atribuicao (75)
    on left: 19 20, on right: 15 16
declaracao_prototipos (76)
    on left: 21, on right: 8
parametros (77)
    on left: 22, on right: 9 21
parametros1 (78)
    on left: 23 24, on right: 22
parametros2 (79)
    on left: 25 26, on right: 23 25
tipo (80)
    on left: 27 28 29, on right: 9 14 21 23 25 87
bloco (81)
    on left: 30, on right: 33 34 35 36 37 44
comandos (82)
    on left: 31 32, on right: 9 30 32
lista_de_comandos (83)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44, on right: 31 32
talvez_exp (84)
    on left: 45 46, on right: 37 41
comma_talvez_exp (85)
    on left: 47 48, on right: 38
exp (86)
    on left: 49 50, on right: 6 17 33 34 35 36 40 42 45 47 50 56 98
    109
expressao_de_atribuicao (87)
    on left: 51 52 53 54, on right: 19 49 50 52 53 54 102 103
expressao_condicional (88)
    on left: 55, on right: 51 56
ternaria (89)
    on left: 56 57, on right: 55
expressao_OR_logica (90)
    on left: 58 59, on right: 55 59
expressao_AND_logico (91)
    on left: 60 61, on right: 58 59 61
expressao_OR (92)
    on left: 62 63, on right: 60 61 63
expressao_XOR (93)
    on left: 64 65, on right: 62 63 65
expressao_AND (94)
    on left: 66 67, on right: 64 65 67
expressao_de_igualdade (95)
    on left: 68 69 70, on right: 66 67 69 70
expressao_relacional (96)
    on left: 71 72 73 74 75, on right: 68 69 70 72 73 74 75
expressao_shift (97)
    on left: 76 77 78, on right: 71 72 73 74 75 77 78
expressao_aditiva (98)
    on left: 79 80 81, on right: 76 77 78 80 81
expressao_multiplicativa (99)
    on left: 82 83 84 85, on right: 79 80 81 83 84 85
expressao_cast (100)
    on left: 86 87, on right: 82 83 84 85 87 91 92 93 94 95 96
expressao_unaria (101)
    on left: 88 89 90 91 92 93 94 95 96, on right: 52 53 54 86 89 90
expressao_pos_fixada (102)
    on left: 97 98 99 100 101, on right: 88 98 99 100 101
loop_expressao_de_atribuicao (103)
    on left: 102 103 104, on right: 101 103
expressao_primaira (104)
    on left: 105 106 107 108 109, on right: 97
numero (105)
    on left: 110 111 112, on right: 106


State 0

    0 $accept: . inicio $end

    VOID         shift, and go to state 1
    INT          shift, and go to state 2
    CHAR         shift, and go to state 3
    NUMBER_SIGN  shift, and go to state 4

    inicio                 go to state 5
    program                go to state 6
    declaracao             go to state 7
    funcao                 go to state 8
    declaracao_variaveis   go to state 9
    declaracao_prototipos  go to state 10
    tipo                   go to state 11


State 1

   29 tipo: VOID .

    $default  reduce using rule 29 (tipo)


State 2

   27 tipo: INT .

    $default  reduce using rule 27 (tipo)


State 3

   28 tipo: CHAR .

    $default  reduce using rule 28 (tipo)


State 4

    6 declaracao: NUMBER_SIGN . DEFINE IDENTIFIER exp

    DEFINE  shift, and go to state 12


State 5

    0 $accept: inicio . $end

    $end  shift, and go to state 13


State 6

    1 inicio: program .
    4 program: program . declaracao
    5        | program . funcao

    VOID         shift, and go to state 1
    INT          shift, and go to state 2
    CHAR         shift, and go to state 3
    NUMBER_SIGN  shift, and go to state 4

    $default  reduce using rule 1 (inicio)

    declaracao             go to state 14
    funcao                 go to state 15
    declaracao_variaveis   go to state 9
    declaracao_prototipos  go to state 10
    tipo                   go to state 11


State 7

    2 program: declaracao .

    $default  reduce using rule 2 (program)


State 8

    3 program: funcao .

    $default  reduce using rule 3 (program)


State 9

    7 declaracao: declaracao_variaveis .

    $default  reduce using rule 7 (declaracao)


State 10

    8 declaracao: declaracao_prototipos .

    $default  reduce using rule 8 (declaracao)


State 11

    9 funcao: tipo . type_pointer IDENTIFIER parametros L_CURLY_BRACKET variaveis comandos R_CURLY_BRACKET
   14 declaracao_variaveis: tipo . declaracao_variaveis1 SEMICOLON
   21 declaracao_prototipos: tipo . type_pointer IDENTIFIER parametros SEMICOLON

    MULTIPLY  shift, and go to state 16

    $default  reduce using rule 11 (type_pointer)

    type_pointer           go to state 17
    declaracao_variaveis1  go to state 18


State 12

    6 declaracao: NUMBER_SIGN DEFINE . IDENTIFIER exp

    IDENTIFIER  shift, and go to state 19


State 13

    0 $accept: inicio $end .

    $default  accept


State 14

    4 program: program declaracao .

    $default  reduce using rule 4 (program)


State 15

    5 program: program funcao .

    $default  reduce using rule 5 (program)


State 16

   10 type_pointer: MULTIPLY .

    $default  reduce using rule 10 (type_pointer)


State 17

    9 funcao: tipo type_pointer . IDENTIFIER parametros L_CURLY_BRACKET variaveis comandos R_CURLY_BRACKET
   15 declaracao_variaveis1: type_pointer . IDENTIFIER vetor atribuicao
   21 declaracao_prototipos: tipo type_pointer . IDENTIFIER parametros SEMICOLON

    IDENTIFIER  shift, and go to state 20


State 18

   14 declaracao_variaveis: tipo declaracao_variaveis1 . SEMICOLON
   16 declaracao_variaveis1: declaracao_variaveis1 . COMMA type_pointer IDENTIFIER vetor atribuicao

    SEMICOLON  shift, and go to state 21
    COMMA      shift, and go to state 22


State 19

    6 declaracao: NUMBER_SIGN DEFINE IDENTIFIER . exp

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    exp                       go to state 38
    expressao_de_atribuicao   go to state 39
    expressao_condicional     go to state 40
    expressao_OR_logica       go to state 41
    expressao_AND_logico      go to state 42
    expressao_OR              go to state 43
    expressao_XOR             go to state 44
    expressao_AND             go to state 45
    expressao_de_igualdade    go to state 46
    expressao_relacional      go to state 47
    expressao_shift           go to state 48
    expressao_aditiva         go to state 49
    expressao_multiplicativa  go to state 50
    expressao_cast            go to state 51
    expressao_unaria          go to state 52
    expressao_pos_fixada      go to state 53
    expressao_primaira        go to state 54
    numero                    go to state 55


State 20

    9 funcao: tipo type_pointer IDENTIFIER . parametros L_CURLY_BRACKET variaveis comandos R_CURLY_BRACKET
   15 declaracao_variaveis1: type_pointer IDENTIFIER . vetor atribuicao
   21 declaracao_prototipos: tipo type_pointer IDENTIFIER . parametros SEMICOLON

    L_PAREN           shift, and go to state 56
    L_SQUARE_BRACKET  shift, and go to state 57

    $default  reduce using rule 18 (vetor)

    vetor       go to state 58
    parametros  go to state 59


State 21

   14 declaracao_variaveis: tipo declaracao_variaveis1 SEMICOLON .

    $default  reduce using rule 14 (declaracao_variaveis)


State 22

   16 declaracao_variaveis1: declaracao_variaveis1 COMMA . type_pointer IDENTIFIER vetor atribuicao

    MULTIPLY  shift, and go to state 16

    $default  reduce using rule 11 (type_pointer)

    type_pointer  go to state 60


State 23

  107 expressao_primaira: CHARACTER .

    $default  reduce using rule 107 (expressao_primaira)


State 24

  110 numero: NUM_INTEGER .

    $default  reduce using rule 110 (numero)


State 25

   93 expressao_unaria: PLUS . expressao_cast

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_cast        go to state 61
    expressao_unaria      go to state 62
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 26

   94 expressao_unaria: MINUS . expressao_cast

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_cast        go to state 63
    expressao_unaria      go to state 62
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 27

   92 expressao_unaria: MULTIPLY . expressao_cast

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_cast        go to state 64
    expressao_unaria      go to state 62
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 28

   89 expressao_unaria: INC . expressao_unaria

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 65
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_unaria      go to state 66
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 29

   90 expressao_unaria: DEC . expressao_unaria

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 65
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_unaria      go to state 67
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 30

   91 expressao_unaria: BITWISE_AND . expressao_cast

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_cast        go to state 68
    expressao_unaria      go to state 62
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 31

   95 expressao_unaria: BITWISE_NOT . expressao_cast

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_cast        go to state 69
    expressao_unaria      go to state 62
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 32

   96 expressao_unaria: NOT . expressao_cast

    CHARACTER    shift, and go to state 23
    NUM_INTEGER  shift, and go to state 24
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    expressao_cast        go to state 70
    expressao_unaria      go to state 62
    expressao_pos_fixada  go to state 53
    expressao_primaira    go to state 54
    numero                go to state 55


State 33

   87 expressao_cast: L_PAREN . tipo type_pointer R_PAREN expressao_cast
  109 expressao_primaira: L_PAREN . exp R_PAREN

    CHARACTER    shift, and go to state 23
    VOID         shift, and go to state 1
    INT          shift, and go to state 2
    NUM_INTEGER  shift, and go to state 24
    CHAR         shift, and go to state 3
    PLUS         shift, and go to state 25
    MINUS        shift, and go to state 26
    MULTIPLY     shift, and go to state 27
    INC          shift, and go to state 28
    DEC          shift, and go to state 29
    BITWISE_AND  shift, and go to state 30
    BITWISE_NOT  shift, and go to state 31
    NOT          shift, and go to state 32
    L_PAREN      shift, and go to state 33
    IDENTIFIER   shift, and go to state 34
    NUM_HEXA     shift, and go to state 35
    NUM_OCTAL    shift, and go to state 36
    STRING       shift, and go to state 37

    tipo                      go to state 71
    exp                       go to state 72
    expressao_de_atribuicao   go to state 39
    expressao_condicional     go to state 40
    expressao_OR_logica       go to state 41
    expressao_AND_logico      go to state 42
    expressao_OR              go to state 43
    expressao_XOR             go to state 44
    expressao_AND             go to state 45
    expressao_de_igualdade    go to state 46
    expressao_relacional      go to state 47
    expressao_shift           go to state 48
    expressao_aditiva         go to state 49
    expressao_multiplicativa  go to state 50
    expressao_cast            go to state 51
    expressao_unaria          go to state 52
    expressao_pos_fixada      go to state 53
    expressao_primaira        go to state 54
    numero                    go to state 55


State 34

  105 expressao_primaira: IDENTIFIER .

    $default  reduce using rule 105 (expressao_primaira)


State 35

  111 numero: NUM_HEXA .

    $default  reduce using rule 111 (numero)


State 36

  112 numero: NUM_OCTAL .

    $default  reduce using rule 112 (numero)


State 37

  108 expressao_primaira: STRING .
